--- a/refrigerantestimate.ipynb
+++ b/refrigerantestimate.ipynb
@@ -1,5 +1,169 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Refrigerant Type</th>\n",
+       "      <th>Applications/Uses</th>\n",
+       "      <th>Global Warming Potential (GWP)</th>\n",
+       "      <th>Other Names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>R-22</td>\n",
+       "      <td>Residential and commercial air conditioning, r...</td>\n",
+       "      <td>1810</td>\n",
+       "      <td>HCFC-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>R-134a</td>\n",
+       "      <td>Automotive air conditioning, refrigeration, ch...</td>\n",
+       "      <td>1430</td>\n",
+       "      <td>HFC-134a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R-410A</td>\n",
+       "      <td>Residential and commercial air conditioning</td>\n",
+       "      <td>2088</td>\n",
+       "      <td>HFC Blend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>R-32</td>\n",
+       "      <td>Residential air conditioning, heat pumps</td>\n",
+       "      <td>675</td>\n",
+       "      <td>HFC-32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>R-404A</td>\n",
+       "      <td>Commercial refrigeration</td>\n",
+       "      <td>3922</td>\n",
+       "      <td>HFC Blend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>R-507</td>\n",
+       "      <td>Commercial and industrial refrigeration</td>\n",
+       "      <td>3985</td>\n",
+       "      <td>HFC Blend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>R-717 (Ammonia)</td>\n",
+       "      <td>Industrial refrigeration, air conditioning, ch...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NH3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>R-290 (Propane)</td>\n",
+       "      <td>Domestic refrigeration, small commercial refri...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>C3H8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>R-600a (Isobutane)</td>\n",
+       "      <td>Domestic refrigeration, small air conditioning...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>C4H10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>R-744 (CO2)</td>\n",
+       "      <td>Commercial refrigeration, heat pumps, air cond...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Carbon Dioxide</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Refrigerant Type                                  Applications/Uses  \\\n",
+       "0                R-22  Residential and commercial air conditioning, r...   \n",
+       "1              R-134a  Automotive air conditioning, refrigeration, ch...   \n",
+       "2              R-410A        Residential and commercial air conditioning   \n",
+       "3                R-32           Residential air conditioning, heat pumps   \n",
+       "4              R-404A                           Commercial refrigeration   \n",
+       "5               R-507            Commercial and industrial refrigeration   \n",
+       "6     R-717 (Ammonia)  Industrial refrigeration, air conditioning, ch...   \n",
+       "7     R-290 (Propane)  Domestic refrigeration, small commercial refri...   \n",
+       "8  R-600a (Isobutane)  Domestic refrigeration, small air conditioning...   \n",
+       "9         R-744 (CO2)  Commercial refrigeration, heat pumps, air cond...   \n",
+       "\n",
+       "   Global Warming Potential (GWP)     Other Names  \n",
+       "0                            1810         HCFC-22  \n",
+       "1                            1430        HFC-134a  \n",
+       "2                            2088       HFC Blend  \n",
+       "3                             675          HFC-32  \n",
+       "4                            3922       HFC Blend  \n",
+       "5                            3985       HFC Blend  \n",
+       "6                               0             NH3  \n",
+       "7                               3            C3H8  \n",
+       "8                               3           C4H10  \n",
+       "9                               1  Carbon Dioxide  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "refrigerants_data = {\n",
+    "    \"Refrigerant Type\": [\"R-22\", \"R-134a\", \"R-410A\", \"R-32\", \"R-404A\", \"R-507\", \"R-717 (Ammonia)\", \"R-290 (Propane)\", \"R-600a (Isobutane)\", \"R-744 (CO2)\"],\n",
+    "    \"Applications/Uses\": [\n",
+    "        \"Residential and commercial air conditioning, refrigeration\",\n",
+    "        \"Automotive air conditioning, refrigeration, chillers\",\n",
+    "        \"Residential and commercial air conditioning\",\n",
+    "        \"Residential air conditioning, heat pumps\",\n",
+    "        \"Commercial refrigeration\",\n",
+    "        \"Commercial and industrial refrigeration\",\n",
+    "        \"Industrial refrigeration, air conditioning, chillers\",\n",
+    "        \"Domestic refrigeration, small commercial refrigeration\",\n",
+    "        \"Domestic refrigeration, small air conditioning systems\",\n",
+    "        \"Commercial refrigeration, heat pumps, air conditioning\"\n",
+    "    ],\n",
+    "    \"Global Warming Potential (GWP)\": [1810, 1430, 2088, 675, 3922, 3985, 0, 3, 3, 1],\n",
+    "    \"Other Names\": [\"HCFC-22\", \"HFC-134a\", \"HFC Blend\", \"HFC-32\", \"HFC Blend\", \"HFC Blend\", \"NH3\", \"C3H8\", \"C4H10\", \"Carbon Dioxide\"]\n",
+    "}\n",
+    "\n",
+    "df_refrigerants = pd.DataFrame(refrigerants_data)\n",
+    "df_refrigerants"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -16,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.0.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
